--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
-        <div class="modal-body mo">
+        <div class="modal-body mo w-75 container">
           <h4>Get Training Quote for free</h4>
           <form>
             <input class="form-control ip" type="text" placeholder="Name"><hr>
@@ -211,7 +211,7 @@
       <div class="card h-100">
         <img src="./image/py.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Python Django - Angular- Full Stack Web Development Expert</h5>
+          <h5 class="cc card-title">Python Django - Angular- Full Stack Web Development Expert</h5>
           <p class="card-text">Core Python, Basics of Programming, Unix Commands, Advanced Python, Django Framework, REST API, Git, Angul..</p>
           <button class="bcard">VIEW MORE</button>
         </div>
@@ -221,7 +221,7 @@
       <div class="card h-100">
         <img src="./image/st-1588580359.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Software Testing Specialist</h5>
+          <h5 class="cc card-title">Software Testing Specialist</h5>
           <p class="card-text">Manual Testing, Java foundations, Mobile Testing, Selenium IDE, Selenium Web driver, Selenium Advanced Web...</p>
           <button class="bcard">VIEW MORE</button>
         </div>
@@ -231,7 +231,7 @@
       <div class="card h-100">
         <img src="./image/ms-1623825586.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">MEARN Stack Web Development Expert - Angular & React</h5>
+          <h5 class="cc card-title">MEARN Stack Web Development Expert - Angular & React</h5>
           <p class="card-text">HTML, CSS, Javascript, Bootstrap, Git, Typescript, MongoDB, MySQL, Express.JS, Angular, React.js and Node....</p>
           <button class="bcard">VIEW MORE</button>
         </div>
